--- a/src/index.css
+++ b/src/index.css
@@ -9,15 +9,18 @@ body {
 }
 
 .fit-screen {
-  text-align: center;
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+
   color: white;
+  background-color: #282c34;
+  font-size: calc(10px + 2vmin);
+  text-align: center;
+
+  min-height: 100vh;
+  min-height: calc(var(--vh, 1vh) * 100);
 }
 
 .stream-screen {
